# liquidity-crunch-monitor

./: .actrc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING_STRATEGY.md  benchmark_test.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: ACT_SETUP_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  SETUP_SECRETS.md  dependabot.yml.example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  event.json  quality.yml  release.yml
config/: settings.yaml
docs/: architecture.md  metrics_guide.md
examples/: multi_exchange_demo.py  simple_example.py
scripts/: run_monitor.py
sql/: indexes.sql  query_daily_risk_summary.sql  schema.sql
src/liquidity_monitor/: py.typed
src/liquidity_monitor/analytics/: risk_engine.py
src/liquidity_monitor/connectors/: __init__.py  binance_futures.py  bybit_futures.py  multi_exchange.py
src/liquidity_monitor/core/: orderbook.py
src/liquidity_monitor/database/: __init__.py  writer.py
src/liquidity_monitor/utils/: latency_monitor.py  logger.py
tests/integration/: test_binance_integration.py
tests/unit/: test_orderbook.py  test_risk_engine.py
