[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liquidity-crunch-monitor"
version = "0.1.0"
description = "Real-time liquidity risk detection for cryptocurrency futures markets"
authors = [
    {name = "Judy Chang", email = "judy.chang.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["hft", "trading", "liquidity", "orderbook", "cryptocurrency", "binance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "aiohttp>=3.12.14",  # Security: CVE-2025-53643 fix
    "uvloop>=0.21.0",
    "websockets>=16.0",
    "sortedcontainers>=2.4.0",
    "numpy>=1.26.0,<3.0",  # 1.26.x supports Python 3.10+
    "pandas>=2.0.0,<3.0",  # 2.x supports Python 3.10+
    "ccxt>=4.5.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.6.1",
    "faker>=33.1.0",
    "aioresponses>=0.7.0",

    # Code Quality
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.14.0",
    "types-aiofiles>=23.2.0",
    "flake8>=7.1.1",
    "pylint>=3.3.4",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.12.12",
    "flake8-comprehensions>=3.16.0",
    "flake8-simplify>=0.21.0",

    # Security
    "bandit>=1.7.10",
    "safety>=3.2.11",
    "pip-audit>=2.7.3",

    # Documentation
    "pydocstyle>=6.3.0",
    "interrogate>=1.7.0",
    "darglint>=1.8.1",

    # Tools
    "pre-commit>=4.0.1",
    "radon>=6.0.1",
    "ipython>=8.31.0",
    "rich>=13.9.4",

    # Type stubs
    "types-PyYAML>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
liquidity-monitor = "liquidity_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "ccxt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sortedcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "orjson.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src/liquidity_monitor --cov-report=term-missing:skip-covered"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require network)",
    "unit: marks tests as unit tests (fast, no I/O)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    # Exclude connectors - require real API connections, tested in integration
    "src/liquidity_monitor/connectors/*",
    # Exclude database writer - requires PostgreSQL, tested in integration
    "src/liquidity_monitor/database/*",
]

[tool.coverage.report]
# Display configuration
show_missing = true      # Show which lines are not covered
precision = 2            # Show two decimal places
fail_under = 85          # High standard for core logic only

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if TYPE_CHECKING",
    "@abstractmethod",
]
